# Protein-Engine

./: .gitignore  Cargo.toml  Makefile  README.md  build-rvf.sh  build-wasm.sh  docker-compose.dev.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/pe-api/: Cargo.toml
crates/pe-api/src/: error.rs  handlers.rs  lib.rs  router.rs  state.rs  tests.rs
crates/pe-chemistry/: Cargo.toml
crates/pe-chemistry/src/: bridge.rs  dto.rs  error.rs  http_client.rs  lib.rs  tests.rs
crates/pe-cli/: Cargo.toml
crates/pe-cli/src/: cli.rs  commands.rs  format.rs  lib.rs  main.rs  tests.rs  wiring.rs
crates/pe-core/: Cargo.toml
crates/pe-core/src/: embedding.rs  experiment.rs  fitness.rs  lib.rs  sequence.rs  tests.rs  variant.rs
crates/pe-governance/: Cargo.toml
crates/pe-governance/src/: error.rs  lib.rs  manager.rs  tests.rs  traits.rs  types.rs
crates/pe-integration-tests/: Cargo.toml
crates/pe-integration-tests/src/: lib.rs
crates/pe-integration-tests/tests/: integration_evolution_cycle.rs  integration_full_safla.rs  integration_ledger_chain.rs  integration_quantum_local.rs  integration_rvf_assembly.rs  integration_scoring_pipeline.rs
crates/pe-ledger/: Cargo.toml
crates/pe-ledger/src/: chain.rs  entry.rs  error.rs  lib.rs  segment.rs  signer.rs  tests.rs  traits.rs  types.rs
crates/pe-neural/: Cargo.toml
crates/pe-neural/src/: ensemble.rs  error.rs  lib.rs  scorers.rs  segment.rs  tests.rs  traits.rs
crates/pe-quantum/: Cargo.toml
crates/pe-quantum-wasm/: Cargo.toml
crates/pe-quantum-wasm/src/: circuit.rs  error.rs  hamiltonian.rs  lib.rs  qaoa.rs  statevector.rs  tests.rs  types.rs  vqe.rs
crates/pe-quantum/src/: error.rs  job.rs  lib.rs  local_backend.rs  router.rs  segment.rs  tests.rs  traits.rs
crates/pe-rvf/: Cargo.toml
crates/pe-rvf/src/: builder.rs  capability.rs  error.rs  lib.rs  manifest.rs  rvf_file.rs  segment.rs  tests.rs  traits.rs
crates/pe-solver/: Cargo.toml
crates/pe-solver/src/: error.rs  gradient.rs  landscape.rs  lib.rs  result.rs  segment.rs  sublinear.rs  tests.rs  traits.rs
crates/pe-stream/: Cargo.toml
crates/pe-stream/src/: error.rs  lib.rs  midstream.rs  normalizer.rs  processor.rs  tests.rs  traits.rs  types.rs
crates/pe-swarm/: Cargo.toml
crates/pe-swarm/src/: coordinator.rs  error.rs  evolution.rs  lib.rs  segment.rs  tests.rs  traits.rs  types.rs
crates/pe-vector/: Cargo.toml
crates/pe-vector/src/: error.rs  in_memory.rs  lib.rs  meta.rs  tests.rs  traits.rs
crates/pe-wasm/: Cargo.toml
crates/pe-wasm/src/: embedder.rs  engine.rs  error.rs  lib.rs  tests.rs
docker/: Dockerfile.chemiq  Dockerfile.node  Dockerfile.wasm-builder
mcp/: README.md  package-lock.json  package.json  protein-engine-mcp.json  server.ts  tsconfig.json
plans/: adr-001-rvf-universal-deployment-artifact.md  adr-002-london-school-tdd-with-mockall.md  adr-003-feature-flag-native-vs-wasm.md  adr-004-trait-boundary-dependency-injection.md  adr-005-post-quantum-cryptography.md  adr-006-quantum-backend-routing.md  adr-007-safla-closed-loop-orchestration.md  adr-008-python-sidecar-quantum-chemistry.md  adr-009-nostd-core-domain-types.md  adr-010-append-only-journal-cryptographic-chaining.md  ddd-001-protein-engineering-domain-model.md  ddd-002-bounded-context-integration-patterns.md  ddd-003-aggregate-specifications.md  prompts.md  research.md  sparc-specification.md
services/chemiq-sidecar/: Dockerfile  conftest.py  main.py  requirements.txt  test_sidecar.py
tests/e2e/: test_cli.sh  test_docker_stack.sh  test_wasm.mjs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  types.ts  wasm.d.ts
web/src/components/: dag-viewer.ts  fitness-chart.ts  sequence-editor.ts
