[package]
name        = "pe-chemistry"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
description = "HTTP bridge to the pyChemiQ quantum chemistry sidecar"

[dependencies]
pe-quantum  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
reqwest     = { workspace = true, optional = true }

[features]
default = ["native"]
native  = ["reqwest"]

[dev-dependencies]
mockall = { workspace = true }
tokio   = { workspace = true, features = ["macros", "rt-multi-thread"] }

