[package]
name = "pe-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Autonomous agent lifecycle management for Protein Engine"

[dependencies]
pe-core = { workspace = true }
serde   = { workspace = true }
uuid    = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
