[package]
name        = "pe-quantum-wasm"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
description = "Pure-Rust statevector quantum simulator"

[dependencies]
num-complex = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
rand        = { workspace = true }
getrandom   = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
mockall = { workspace = true }
