[package]
name = "pe-rvf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RVF cognitive container builder and segment definitions"

[features]
default = ["native"]
native = []
wasm = []

[dependencies]
pe-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
