[package]
name = "pe-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Live laboratory instrument data ingestion for Protein Engine"

[features]
default = ["native"]
native = []

[dependencies]
pe-core     = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio   = { workspace = true, features = ["macros", "rt-multi-thread"] }
